force-app/main/default/objects/FieloEE__PreviewSettings__c/FieloEE__PreviewSettings__c.object-meta.xml
<CustomObject>
    <label>Preview Settings</label>
    <nameField>
        <label>Preview Settings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Preview Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>