force-app/main/default/objects/FieloEE__PreviewSettings__c/fields/FieloEE__Height__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Height__c</fullName>
    <defaultValue>&#39;800&#39;</defaultValue>
    <label>Height</label>
    <length>10</length>
    <type>Text</type>
</CustomField>