force-app/main/default/objects/FieloEE__PreviewSettings__c/fields/FieloEE__Language__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Language__c</fullName>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>es</fullName>
                <label>Español</label>
            </value>
            <value>
                <fullName>en</fullName>
                <default>true</default>
                <label>English</label>
            </value>
            <value>
                <fullName>fr</fullName>
                <label>French</label>
            </value>
            <value>
                <fullName>pt</fullName>
                <label>Portuguese</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>