force-app/main/default/objects/FieloEE__PreviewSettings__c/fields/FieloEE__Member__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Member</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>FieloEE__Member__c.FieloEE__Program__c</field>
            <operation>equals</operation>
            <valueField>$Source.FieloEE__Program__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FieloEE__Member__c</referenceTo>
    <relationshipLabel>Preview Settings</relationshipLabel>
    <relationshipName>Preview_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>