force-app/main/default/objects/FieloEE__PreviewSettings__c/fields/FieloEE__Mode__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Mode__c</fullName>
    <label>Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wireframe</fullName>
                <default>true</default>
                <label>Wireframe</label>
            </value>
            <value>
                <fullName>Live</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>