force-app/main/default/objects/FieloEE__PreviewSettings__c/fields/FieloEE__Overlay__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Overlay__c</fullName>
    <label>Overlay</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hover</fullName>
                <default>true</default>
                <label>Hover</label>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Disabled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>