force-app/main/default/objects/FieloEE__PreviewSettings__c/fields/FieloEE__Program__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <referenceTo>FieloEE__Program__c</referenceTo>
    <relationshipLabel>Preview Settings</relationshipLabel>
    <relationshipName>Preview_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>