force-app/main/default/objects/FieloEE__PreviewSettings__c/fields/FieloEE__Segments__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Segments__c</fullName>
    <label>Segments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>