force-app/main/default/objects/FieloEE__PreviewSettings__c/fields/FieloEE__User__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Preview_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>